--- a/index.html
+++ b/index.html
@@ -233,7 +233,12 @@
         </div>
       </div>
     </main>
-    <footer class="text-white-50 text-center">© Weather</footer>
+    <footer class="text-white-50 text-center">
+      <a href="https://github.com/YaroshenkoAnna/Weather-app"
+        >Open-source code</a
+      >
+      © Weather
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
