corrections in markup
Add horizontal scroll of forecast block

correct the same height of card-header

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         width="120px"
                         id="clouds"
                     /></span>
-                    <span class="fs-1 fw-bold p-2" id="cur-temp">+11 </span>
+                    <span class="fs-1 fw-bold pe-2" id="cur-temp">+11 </span>
                     <span id="celsius-fahrenheit"
                       ><a
                         href=""
@@ -124,10 +124,10 @@
             </div>
             <div class="col-md-8">
               <div class="card">
-                <div class="card-header border-0 pb-4">
+                <div class="card-header border-0 pb-4" id="forecast-header">
                   <h3 class="card-title">Weather for 5 days</h3>
                 </div>
-                <div class="card-body">
+                <div class="card-body" id="forecast">
                   <table class="table align-middle text-center">
                     <thead>
                       <tr>
